# Bicausal_Wasserstein_MtglProj

./: .gitignore  Adapted_LSV_calibration.py  Adapted_LV_calibration.py  Neural_SDE_exp0_nobound_maturity32_AugmentedLagrangian.pth.tar  README.md  bdd_fun.py  error_hedge.pth.tar  error_hedge.txt  error_hedge_LV.txt  log_eval.txt  log_train.txt  markov.py  mtgl.py  pyproject.toml  requirements.txt
Applications/: Adapted_LSV_calibration.py  markov.py
Applications/nsde_calibration/: adapted_LV.py
applications/markov/: bdd_fun.py  markov.py
applications/nsde_calibration/: adapted_LSV.py  adapted_LV.py  heston_call.py  networks.py
data/: error_hedge_LV.txt
demos/: adapted_empirical_distance.ipynb  calibration demo.ipynb  markov.ipynb  nsde_calibration.ipynb  simulation.ipynb  synthetic_experiment.ipynb  test_nsde_calibration.ipynb
demos/asymp_sim/: asymp_n1000_N1000_sig1_rho5_seed42.txt
log_LSV/: log_eval.txt
log_LV/: Neural_SDE_exp0_nobound_maturity32_AugmentedLagrangian.pth.tar  log_train.txt
scripts/: argparse_helper.py  heston_coupling.py  run_adapted_LSV.py  run_adapted_LV.py  run_adapted_mpd.py  run_asymptotics.py  run_smoothed_mpd.py
simulated_data/: d2rho5p50sig1n1000.txt
src/adapted_mtgl/: utils.py
src/adapted_mtgl/applications/markov/: markov.py
src/adapted_mtgl/applications/nsde_calibration/: heston_call.py
src/adapted_mtgl/apps/: mtgLoss.py  past_funs.py
src/adapted_mtgl/mtgl_test/: ada_emp_dist.py  mtgl.py  mtgl_couplings.py  multiD.py  sim.py  test_cases.py  tools.py
src/adapted_mtgl/simulation/: sim.py
