[project]
name = "mtglproj"
version = "0.1.0"
description = "Smoothed Empirical Martingale Projection Distance (SE-MPD) test for high-dimensional martingale couplings."
authors = [
    { name = "Erica Zhang" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "matplotlib==3.10.1",
    "numpy==2.2.4",
    "scikit-learn==1.6.1",
    "scipy==1.15.2",
    "torch==2.5.1",
    "tqdm==4.67.1",
    "transformers==4.49.0"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
